syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "pagination/v1/pagination.proto";

import "audit/service/v1/api_audit_log.proto";

// API审计日志管理服务
service ApiAuditLogService {
  // 查询API审计日志列表
  rpc List (pagination.PagingRequest) returns (audit.service.v1.ListApiAuditLogResponse) {
    option (google.api.http) = {
      get: "/admin/v1/api-audit-logs"
    };
  }

  // 查询API审计日志详情
  rpc Get (audit.service.v1.GetApiAuditLogRequest) returns (audit.service.v1.ApiAuditLog) {
    option (google.api.http) = {
      get: "/admin/v1/api-audit-logs/{id}"
    };
  }
}
