syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "pagination/v1/pagination.proto";

import "audit/service/v1/data_access_audit_log.proto";

// 数据访问审计日志管理服务
service DataAccessAuditLogService {
  // 查询数据访问审计日志列表
  rpc List (pagination.PagingRequest) returns (audit.service.v1.ListDataAccessAuditLogResponse) {
    option (google.api.http) = {
      get: "/admin/v1/data-access-audit-logs"
    };
  }

  // 查询数据访问审计日志详情
  rpc Get (audit.service.v1.GetDataAccessAuditLogRequest) returns (audit.service.v1.DataAccessAuditLog) {
    option (google.api.http) = {
      get: "/admin/v1/data-access-audit-logs/{id}"
    };
  }
}
