syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";
import "dict/service/v1/dict_entry.proto";

// 数据字典条目管理服务
service DictEntryService {
   // 分页查询字典条目列表
  rpc List (pagination.PagingRequest) returns (dict.service.v1.ListDictEntryResponse) {
    option (google.api.http) = {
      get: "/admin/v1/dict/entries"
    };
  }

  // 创建字典条目
  rpc Create (dict.service.v1.CreateDictEntryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/dict/entries"
      body: "*"
    };
  }

  // 更新字典条目
  rpc Update (dict.service.v1.UpdateDictEntryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/dict/entries/{id}"
      body: "*"
    };
  }

  // 删除字典条目
  rpc Delete (dict.service.v1.DeleteDictEntryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/dict/entries"
    };
  }
}
