syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

import "resource/service/v1/menu.proto";

// 后台菜单管理服务
service MenuService {
  // 查询菜单列表
  rpc List (pagination.PagingRequest) returns (resource.service.v1.ListMenuResponse) {
    option (google.api.http) = {
      get: "/admin/v1/menus"
    };
  }

  // 查询菜单详情
  rpc Get (resource.service.v1.GetMenuRequest) returns (resource.service.v1.Menu) {
    option (google.api.http) = {
      get: "/admin/v1/menus/{id}"
    };
  }

  // 创建菜单
  rpc Create (resource.service.v1.CreateMenuRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/menus"
      body: "*"
    };
  }

  // 更新菜单
  rpc Update (resource.service.v1.UpdateMenuRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/menus/{id}"
      body: "*"
    };
  }

  // 删除菜单
  rpc Delete (resource.service.v1.DeleteMenuRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/menus/{id}"
    };
  }
}
