syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "pagination/v1/pagination.proto";

import "audit/service/v1/operation_audit_log.proto";

// 操作审计日志管理服务
service OperationAuditLogService {
  // 查询操作审计日志列表
  rpc List (pagination.PagingRequest) returns (audit.service.v1.ListOperationAuditLogResponse) {
    option (google.api.http) = {
      get: "/admin/v1/operation-audit-logs"
    };
  }

  // 查询操作审计日志详情
  rpc Get (audit.service.v1.GetOperationAuditLogRequest) returns (audit.service.v1.OperationAuditLog) {
    option (google.api.http) = {
      get: "/admin/v1/operation-audit-logs/{id}"
    };
  }
}
