syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/v1/pagination.proto";

import "identity/service/v1/position.proto";

// 职位管理服务
service PositionService {
  // 查询职位列表
  rpc List (pagination.PagingRequest) returns (identity.service.v1.ListPositionResponse) {
    option (google.api.http) = {
      get: "/admin/v1/positions"
    };
  }

  // 查询职位详情
  rpc Get (identity.service.v1.GetPositionRequest) returns (identity.service.v1.Position) {
    option (google.api.http) = {
      get: "/admin/v1/positions/{id}"
    };
  }

  // 创建职位
  rpc Create (identity.service.v1.CreatePositionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/positions"
      body: "*"
    };
  }

  // 更新职位
  rpc Update (identity.service.v1.UpdatePositionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/positions/{id}"
      body: "*"
    };
  }

  // 删除职位
  rpc Delete (identity.service.v1.DeletePositionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/positions/{id}"
    };
  }
}
